--- a/package.json
+++ b/package.json
@@ -6,8 +6,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/next": "^8.0.6",
+    "@types/react": "^16.9.3",
+    "@types/styled-jsx": "^2.2.8",
+    "effector": "^20.3.0",
+    "effector-react": "^20.3.0",
     "next": "^9.0.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
+    "eslint": "^6.4.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.18.2",
+    "typescript": "^3.6.3"
   }
 }
